--- a/style.css
+++ b/style.css
@@ -76,4 +76,14 @@ p{font-size:16px;line-height:1.8;margin-top:15px}
     0%,100%{transform:scale(1)}
     50%{transform:scale(1.1)}
 }
+#startBtn{
+    position:fixed;
+    inset:0;
+    background:#000;
+    color:white;
+    font-size:26px;
+    border:none;
+    z-index:9999;
+}
+
 
